gnome = import('gnome')

coldwind_resources = gnome.compile_resources('coldwind-resources',
                                             'coldwind.gresource.xml',
                                             install_header : false,
                                             export : false,
                                             c_name : 'coldwind_resources')
